--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
+  "type": "module",
   "files": [
     "dist"
   ],
@@ -43,6 +44,7 @@
     "@types/three": "^0.181.0",
     "ammojs-typed": "^1.0.6",
     "esbuild": "^0.27.0",
+    "esbuild-plugin-inline-worker": "^0.1.1",
     "husky": "^9.1.7",
     "prettier": "^3.6.2",
     "pretty-quick": "^4.2.2",
@@ -56,9 +58,7 @@
   "dependencies": {
     "@react-three/drei": "^10.7.7",
     "ammo-debug-drawer": "^1.0.1",
-    "ammo.js": "kripken/ammo.js",
     "leva": "^0.10.1",
-    "stats-gl": "^3.7.0",
     "three-stdlib": "^2.36.1"
   },
   "peerDependencies": {
